[gd_scene load_steps=9 format=3 uid="uid://bukc3tjmqhra0"]

[ext_resource type="PackedScene" uid="uid://t0plcqtux4aj" path="res://src/Scenes/UI/SelectionScene/TextTextureUI.tscn" id="1_7mdxs"]
[ext_resource type="Script" path="res://src/Scripts/Scenes/GameShipSelection.gd" id="1_hjctn"]
[ext_resource type="PackedScene" uid="uid://bynfg43xmrc4b" path="res://src/Scenes/UI/SelectionScene/SideBorderUI.tscn" id="2_4prb7"]
[ext_resource type="PackedScene" uid="uid://cfp6585xx6raj" path="res://src/Scenes/UI/SelectionScene/SideTooltipUI.tscn" id="3_ho6mp"]
[ext_resource type="PackedScene" uid="uid://bssxlii1nubs6" path="res://src/Scenes/UI/SelectionScene/MainTextUI.tscn" id="4_5iht1"]
[ext_resource type="PackedScene" uid="uid://cwi6ryoyw8m6b" path="res://src/Scenes/UI/SelectionScene/TimerUI.tscn" id="5_4fpfk"]

[sub_resource type="Animation" id="Animation_dqcbs"]
resource_name = "IntroAnim"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainTextUI")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playIntroAnim"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SideBorderUI")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playIntroAnim"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SideTooltipUI")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playIntroAnim"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextTextureUI")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playIntroAnim"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TimerUI")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playIntroAnim"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_agrhu"]
_data = {
"IntroAnim": SubResource("Animation_dqcbs")
}

[node name="GameShipSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hjctn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.168627, 1)

[node name="TextTextureUI" parent="." instance=ExtResource("1_7mdxs")]
layout_mode = 1

[node name="SideBorderUI" parent="." instance=ExtResource("2_4prb7")]
layout_mode = 1

[node name="SideTooltipUI" parent="." instance=ExtResource("3_ho6mp")]
layout_mode = 1

[node name="TimerUI" parent="." instance=ExtResource("5_4fpfk")]
layout_mode = 1
Countdown = 60

[node name="MainTextUI" parent="." instance=ExtResource("4_5iht1")]
layout_mode = 1

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_agrhu")
}
